--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,86 @@
 body {
-  background-color: lightblue;
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+  padding-left: 10px;
+}
+
+.container {
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+h1 {
+  text-align: center;
+  color: #ffcc00;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+label {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+input[type="number"] {
+  width: 90%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin: 5px 0;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #ffcc00;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #ffa500;
+}
+
+.planet-info {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.planet-info span {
+  font-size: 18px;
+  color: #333;
+}
+
+.planet-years {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.planet-years span {
+  font-size: 16px;
+  color: #666;
+}
+
+.footer {
+  text-align: center;
+  color: #999;
+  margin-top: 30px;
 }
